--- a/healthy-app/src/index.css
+++ b/healthy-app/src/index.css
@@ -71,3 +71,8 @@ body {
   height: 100%;
   background: linear-gradient(45deg,rgba(255, 204, 33, 1) 0%, rgba(255, 150, 60, 1) 100%);
 }
+
+.hexagon {
+  -webkit-clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
+  clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
+}
